# Yun-mon

./: .env.example  .gitignore  LICENSE  README.md  compose.yaml
apps/control-plane/: Dockerfile  README.md  pyproject.toml  server.py
apps/control-plane/src/yunmon_control_plane/: __init__.py  applications.py  config.py  main.py  metrics.py  service.py
apps/control-plane/src/yunmon_control_plane/api/: __init__.py  app.py  deps.py
apps/control-plane/src/yunmon_control_plane/audit/: __init__.py  log.py  snapshot.py
apps/control-plane/src/yunmon_control_plane/catalog/: __init__.py  canonical.py  hints.py  normalize.py
apps/control-plane/src/yunmon_control_plane/clients/: __init__.py  docker_client.py  prometheus.py  stack_agent.py
apps/control-plane/src/yunmon_control_plane/collectors/: __init__.py  container_stats.py
apps/control-plane/src/yunmon_control_plane/jobs/: __init__.py  manager.py
apps/control-plane/src/yunmon_control_plane/renderers/: __init__.py  _yaml.py  alertmanager.py  dashboards.py  env.py  loki.py  otel_collector.py  prometheus.py  promtail.py  rules.py
apps/control-plane/src/yunmon_control_plane/runtime/: __init__.py  compose.py  executor.py  kubernetes.py
apps/control-plane/src/yunmon_control_plane/security/: __init__.py  accounts.py  auth.py
apps/control-plane/src/yunmon_control_plane/state/: __init__.py  defaults.py  schema.py  store.py
apps/control-plane/static/: app.js  index.html  styles.css
apps/control-plane/tests/unit/: test_api_app.py  test_audit_snapshot.py  test_catalog.py  test_jobs.py  test_renderers_env.py  test_renderers_yaml.py  test_security.py  test_state_migrations.py  test_state_schema.py  test_state_store.py
apps/control-plane/web/: README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
apps/control-plane/web/src/: App.vue  router.ts
apps/control-plane/web/src/api/: client.ts
apps/control-plane/web/src/stores/: config.ts
apps/control-plane/web/src/styles/: global.css
apps/control-plane/web/src/views/: ApplicationsView.vue  AuditView.vue  ConfigView.vue  JobsView.vue  (+2 more)
(+59 files in other folders)
