[project]
name = "yunmon-control-plane"
version = "0.2.0"
description = "Yun-mon unified control plane"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Yun-mon" }]
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "pydantic>=2.9",
  "pydantic-settings>=2.5",
  "PyYAML>=6.0",
  "prometheus-client>=0.21",
  "docker>=7.1",
  "httpx>=0.27",
  "python-multipart>=0.0.18",
  "bcrypt>=4.2",
  "pyjwt>=2.9",
  "jsonpatch>=1.33",
  "ulid-py>=1.1",
  "opentelemetry-api>=1.27",
  "opentelemetry-sdk>=1.27",
  "opentelemetry-exporter-otlp-proto-http>=1.27",
  "opentelemetry-instrumentation-fastapi>=0.48b0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "pytest-asyncio>=0.24",
  "pytest-cov>=5.0",
  "ruff>=0.7",
  "mypy>=1.13",
  "types-PyYAML>=6.0",
]

[project.scripts]
yunmon-control-plane = "yunmon_control_plane.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/yunmon_control_plane"]

[tool.ruff]
line-length = 200
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "N", "PL", "RUF"]
ignore = [
  "PLR0913",
  "PLR2004",
  "PLR0915",
  "PLR0912",
  "PLR0911",
  "RUF002",
  "RUF003",
  "RUF012",
  "PLR0917",
  "PLW1641",
  "N802",
  "N803",
  "N815",
  "PLC0415",
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B", "PLW", "PLR", "RUF", "PLC", "ANN", "PLR2004"]
"src/yunmon_control_plane/api/v1/*.py" = ["B008"]
"src/yunmon_control_plane/api/deps.py" = ["B008"]
"src/yunmon_control_plane/state/schema.py" = ["UP007", "UP006", "UP037"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra --strict-markers"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.coverage.run]
branch = true
source = ["yunmon_control_plane"]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "raise NotImplementedError",
  "if __name__ == .__main__.:",
]
